--- a/flows/.htaccess
+++ b/flows/.htaccess
@@ -1,1 +1,1 @@
-AddType application/json;profile=/~meredydd/ane/schemas/flow.json .json
+AddType application/json;profile=../schemas/flow.json .json
